@@ -1,4 +1,5 @@
 version 0.10.0 - currently working on
+- [BUGFIX] Location not shown in list view (Thanks Thomas Gemperle)
 
 version 0.9.0 - released 2012-05-21
 - [#3760] Documentation: Fixed the realURL example
